--- a/public/css/components/ProfilePhoto.css
+++ b/public/css/components/ProfilePhoto.css
@@ -1,6 +1,5 @@
 .ProfilePhoto {
   border-radius: 50%;
-  position: absolute;
 }
 
 /*
